--- a/index.html
+++ b/index.html
@@ -50,18 +50,9 @@
       <h2>
         <i>
           किसी भाषा में प्रचलित वाक्यांश या पद समूह, जो अभिधा या शाब्दिक अर्थ से
-          भिन्न लक्षणायुक्त विशेष अर्थ देता है, मुहावरा कहलाता है। यद्यपि यह
-          शब्द अरबी भाषा का है, किंतु पारिभाषिक शब्द के रूप में हिंदी में
-          प्रयुक्त होने लगा है। इसे वाग्बंध भी कहते हैं। ये वाक्यांश होते हैं और
-          स्वतंत्र रूप से प्रयुक्त नहीं होते। इनका प्रयोग वाक्यों के मध्य ही
-          होता है। इन वाक्यांशों के प्रयोग के परिपाश्र्व में कोई-न-कोई सामाजिक,
-          राजनीतिक, मनोवैज्ञानिक एवं साहित्यिक कारण निहित रहता है। वास्तव में इन
-          मुहावरों में अर्थ द्योतन की क्षमता भी पीढ़ियों के प्रयोग एवं व्यवहार
-          से आ पाई है। यदि ध्यान से किसी मुहावरे का निरीक्षण किया जाए तो ज्ञात
-          होगा कि उसके लाक्षणिक अर्थों में कुछ-न-कुछ संबंध अवश्य होता है। इनके
-          सामयिक प्रयोग से भाषा महत्त्वपूर्ण, सजीव, आकर्षक एवं पुष्ट भी बन जाती
-          है। अतः विद्यार्थियों, लेखकों को इनका ज्ञान होना आवश्यक है। यहाँ हम
-          कुछ प्रमुख मुहावरे प्रस्तुत कर रहे है।
+          भिन्न लक्षणायुक्त विशेष अर्थ देता है, मुहावरा कहलाता है। अतः
+          विद्यार्थियों, लेखकों को इनका ज्ञान होना आवश्यक है। यहाँ हम कुछ प्रमुख
+          मुहावरे प्रस्तुत कर रहे है।
         </i>
       </h2>
     </div>
