--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Hindi</title>
     <style>
-      body{
-        background-color: whitesmoke;
-      }
+      
       * {
         box-sizing: border-box;
       }
 
       #myInput {
-        background-image: url("/css/searchicon.png");
-        background-position: 10px 10px;
+        background-image: url("icons8-search-24.png");
+        background-position: 10px 12px;
         background-repeat: no-repeat;
         width: 100%;
         font-size: 16px;
@@ -42,6 +41,9 @@
       #myTable tr:hover {
         background-color: #f1f1f1;
       }
+      tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
     </style>
   </head>
   <body>
