--- a/hindi.html
+++ b/hindi.html
@@ -44,9 +44,28 @@
       tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.previous {
+  background-color: #04AA6D;
+  color: black;
+}
+
+
+
     </style>
   </head>
   <body>
+    <a href="index.html" class="previous">&laquo; Previous</a>
     <h1>मुहावरा</h1>
     <div style="text-align: justify">
       <h2>
