--- a/index.html
+++ b/index.html
@@ -33,17 +33,18 @@
 /* The navbar */
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: blue;
 }
 
 /* Navbar links */
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: yellow;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  font-weight: bold;
 }
 
 .topnav a:hover {
@@ -58,8 +59,8 @@
     <div class="container">
       <div class="topnav">
         <a href="index.html">Home</a>
-        <a href="hindi.html">मुहावरे</a>
-        <a href="english.html">IDIOMS</a>
+        <a href="hindi.html">हिंदी मुहावरे</a>
+        <a href="english.html">IDIOMS & PHRASES</a>
         <a href="#about">About</a>
       </div>
     </div>
