--- a/hindi.html
+++ b/hindi.html
@@ -1413,30 +1413,8 @@ body {
       </tr>
     </table>
 
-    <script>
-      function myFunction() {
-        var input, filter, table, tr, td, i, txtValue;
-        input = document.getElementById("myInput");
-        filter = input.value.toUpperCase();
-        table = document.getElementById("myTable");
-        tr = table.getElementsByTagName("tr");
-        for (i = 0; i < tr.length; i++) {
-          td = tr[i].getElementsByTagName("td")[0];
-          if (td) {
-            txtValue = td.textContent || td.innerText;
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-              tr[i].style.display = "";
-            } else {
-              tr[i].style.display = "none";
-            }
-          }
-        }
-      }
-      function myFunction() {
-   var element = document.body;
-   element.classList.toggle("dark-mode");
-}
-      
-    </script>
+    <script src="script.js" ></script>
+    
+   
   </body>
 </html>
