--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {font-family: Arial, Helvetica, sans-serif}
 * {box-sizing: border-box;}
@@ -43,8 +42,7 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
-  font-weight: bold;
+  font-size: 13px;
 }
 
 .topnav a:hover {
@@ -61,7 +59,8 @@
         <a href="index.html">Home</a>
         <a href="hindi.html">हिंदी मुहावरे</a>
         <a href="english.html">IDIOMS & PHRASES</a>
-        <a href="#about">About</a>
+        <a href="roman.html">ROMAN NUMBER</a>
+        <a href="contactus.html">CONTACT US</a>
       </div>
     </div>
   </div>
