--- a/contactus.html
+++ b/contactus.html
@@ -54,7 +54,7 @@ a:hover {
 </head>
 <body>
     <a href="index.html" class="previous">&laquo; Previous</a>
-<h3>Contact Form</h3>
+<h3>Contact Us</h3>
 
 <div class="container">
   <form action="/action_page.php">
