--- a/roman.html
+++ b/roman.html
@@ -79,7 +79,7 @@
       type="text"
       id="myInput"
       onkeyup="myFunction()"
-      placeholder="Type in English";
+      placeholder="Type in ROMAN";
       title="Type in a name"
     />
 
