--- a/english.html
+++ b/english.html
@@ -67,10 +67,29 @@
   background-color: black;
   color: white;
 }
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
 
+#myBtn:hover {
+  background-color: #555;
+}
     </style>
   </head>
   <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <a href="index.html" class="previous">&laquo; Previous</a>
     <button onclick="myFunction()">Dark Mode</button>
     <h1>IDIOMS AND PHRASES</h1>
@@ -759,6 +778,7 @@
     </table>
 
     <script src="script.js" ></script>
+    <script src="top.js" ></script>
     
   </body>
 </html>
