--- a/hindi.html
+++ b/hindi.html
@@ -69,9 +69,30 @@ body {
   background-color: black;
   color: white;
 }
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
     </style>
   </head>
   <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
     <a href="index.html" class="previous">&laquo; Previous</a>
     <button onclick="myFunction()">Dark Mode</button>
         <h1>मुहावरा</h1>
@@ -1414,6 +1435,7 @@ body {
     </table>
 
     <script src="script.js" ></script>
+    <script src="top.js" ></script>
     
    
   </body>
