--- a/roman.html
+++ b/roman.html
@@ -3,72 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ROMAN</title>
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-
-      #myInput {
-        background-image: url("icons8-search-24.png");
-        background-position: 10px 12px;
-        background-repeat: no-repeat;
-        width: 100%;
-        font-size: 16px;
-        padding: 12px 20px 12px 40px;
-        border: 1px solid #ddd;
-        margin-bottom: 12px;
-      }
-
-      #myTable {
-        border-collapse: collapse;
-        width: 100%;
-        border: 1px solid #ddd;
-        font-size: 18px;
-      }
-
-      #myTable th,
-      #myTable td {
-        text-align: left;
-        padding: 12px;
-      }
-
-      #myTable tr {
-        border-bottom: 1px solid #ddd;
-      }
-
-      #myTable tr.header,
-      #myTable tr:hover {
-        background-color: #f1f1f1;
-      }
-      
-      a {
-        text-decoration: none;
-        display: inline-block;
-        padding: 8px 16px;
-      }
-
-      a:hover {
-        background-color: #ddd;
-        color: black;
-      }
-
-      .previous {
-        background-color: #04aa6d;
-        color: black;
-      }
-      body {
-  padding: 25px;
-  background-color: white;
-  color: black;
-  font-size: 17px;
-}
-
-.dark-mode {
-  background-color: black;
-  color: white;
-}
-
-    </style>
+    <link rel="stylesheet" href="style.css"/>
+    
   </head>
   <body>
     <a href="index.html" class="previous">&laquo; Previous</a>
