--- a/english.html
+++ b/english.html
@@ -3,9 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>IDIOMS</title>
-    <link rel="stylesheet" href="style.css">
-  
-      
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
@@ -17,7 +15,8 @@
       type="text"
       id="myInput"
       onkeyup="myFunction()"
-      placeholder="Type in English";
+      placeholder="Type in English"
+      ;
       title="Type in a name"
     />
 
@@ -696,8 +695,7 @@
       </tr>
     </table>
 
-    <script src="script.js" ></script>
-    <script src="top.js" ></script>
-    
+    <script src="script.js"></script>
+    <script src="top.js"></script>
   </body>
 </html>
