--- a/index.html
+++ b/index.html
@@ -1,68 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {font-family: Arial, Helvetica, sans-serif}
-* {box-sizing: border-box;}
-
-.bg-img {
-  /* The image used */
-  background-image: url("brown\ white\ elegant\ welcome\ to\ our\ shop\ facebook\ post.png");
-
-  min-height: 380px;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  
-  /* Needed to position the navbar */
-  position: relative;
-}
-
-/* Position the navbar container inside the image */
-.container {
-  position: absolute;
-  margin: 20px;
-  width: auto;
-}
-
-/* The navbar */
-.topnav {
-  overflow: hidden;
-  background-color: blue;
-}
-
-/* Navbar links */
-.topnav a {
-  float: left;
-  color: yellow;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 13px;
-}
-
-.topnav a:hover {
-  background-color: green;
-  color: yellow;
-}
-        </style>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="nav.css"/>
     <title>TARUN KUMAR</title>
-</head>
-<body>
-  <div class="bg-img">
-    <div class="container">
-      <div class="topnav">
+  </head>
+  <body>
+    <div id="myNav" class="overlay">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <div class="overlay-content">
         <a href="index.html">Home</a>
-        <a href="hindi.html">हिंदी मुहावरे</a>
-        <a href="english.html">IDIOMS & PHRASES</a>
+        <a href="hindi.html">मुहावरे</a>
+        <a href="english.html">IDIOMS</a>
         <a href="roman.html">ROMAN NUMBER</a>
         <a href="contactus.html">CONTACT US</a>
       </div>
     </div>
-  </div>
-</body>
+    
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+        <div>
+        <img src="brown white elegant welcome to our shop facebook post.png" alt="wELCOME" width="100%" height="600">
+      </div>
+    <script src="nav.js"></script>
+  </body>
 </html>
