--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="nav.css"/>
     <title>TARUN KUMAR</title>
+    <style>
+      .top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  font-size: 20px;
+  color: blue;
+  font-weight: bold;
+
+}
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+  overflow: hidden;
+}
+    </style>
   </head>
   <body>
     <div id="myNav" class="overlay">
@@ -13,13 +30,16 @@
         <a href="hindi.html">मुहावरे</a>
         <a href="english.html">IDIOMS</a>
         <a href="roman.html">ROMAN NUMBER</a>
+        <a href="computer.html">COMPUTER</a>
+        <a href="words.html">ENGLISH WORDS</a>
         <a href="contactus.html">CONTACT US</a>
       </div>
     </div>
     
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
-        <div>
-        <img src="brown white elegant welcome to our shop facebook post.png" alt="wELCOME" width="100%" height="600">
+        <span style="font-size:32px;cursor:pointer" onclick="openNav()">&#9776; OPEN</span>
+        <div class="container">
+        <img src="brown white elegant welcome to our shop facebook post.png" alt="wELCOME" width="100%" height="auto">
+        <div class="top-left">LANGUAGES ARE LIKE A CONVEYOR BELT.</div>
       </div>
     <script src="nav.js"></script>
   </body>
