--- a/computer.html
+++ b/computer.html
@@ -8,7 +8,7 @@
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
-    <a href="index.html" class="previous">&laquo; Previous</a>
+    <a href="hindi.html" class="previous">&laquo; HOME</a>
     
         <h1>Most Important Computer Related Full Forms - You Should Know</h1>
     
