--- a/english.html
+++ b/english.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-    <a href="index.html" class="previous">&laquo; Previous</a>
-    <button onclick="myFunction()">Dark Mode</button>
+    <a href="hindi.html" class="previous">&laquo; HOME</a>
+    
     <h1>IDIOMS AND PHRASES</h1>
 
     <input
