--- a/roman.html
+++ b/roman.html
@@ -7,8 +7,8 @@
     
   </head>
   <body>
-    <a href="index.html" class="previous">&laquo; Previous</a>
-    <button onclick="myFunction()">Dark Mode</button>
+    <a href="hindi.html" class="previous">&laquo; HOME</a>
+    
     <h1>ROMAN NUMERALS</h1>
 
     <input
