--- a/contactus.html
+++ b/contactus.html
@@ -54,7 +54,7 @@ a:hover {
 </style>
 </head>
 <body>
-    <a href="index.html" class="previous">&laquo; Previous</a>
+    <a href="hindi.html" class="previous">&laquo; HOME</a>
 <h3>Contact US</h3>
 
 <div class="container">
