--- a/computer.html
+++ b/computer.html
@@ -10,7 +10,7 @@
 
     <a href="hindi.html" class="previous">&laquo; HOME</a>
     
-        <h1>Most Important Computer Related Full Forms - You Should Know</h1>
+        <h4 style=" text-align:center ">Most Important Computer Related Full Forms - You Should Know</h4>
     
     <input
       type="text"
