--- a/english.html
+++ b/english.html
@@ -15,7 +15,7 @@
       type="text"
       id="myInput"
       onkeyup="myFunction()"
-      placeholder="Type in English"
+      placeholder="Search IDIOMS..."
       ;
       title="Type in a name"
     />
