--- a/hindi.html
+++ b/hindi.html
@@ -44,7 +44,7 @@
     <input
       type="text"
       id="myInput"
-      onkeyup="myFunction()"
+      onkeyup="myFunction1()"
       placeholder="Type in Hindi.."
       title="Type in a name"
     />
