--- a/roman.html
+++ b/roman.html
@@ -15,7 +15,7 @@
       type="text"
       id="myInput"
       onkeyup="myFunction()"
-      placeholder="Type in ROMAN";
+      placeholder="Roman number....";
       title="Type in a name"
     />
 
