--- a/words.html
+++ b/words.html
@@ -16,7 +16,7 @@
       type="text"
       id="myInput"
       onkeyup="myFunction()"
-      placeholder="Type in Hindi.."
+      placeholder="search words"
       title="Type in a name"
     />
 
