--- a/computer.html
+++ b/computer.html
@@ -16,7 +16,7 @@
       type="text"
       id="myInput"
       onkeyup="myFunction()"
-      placeholder="Type in Hindi.."
+      placeholder="Search full forms"
       title="Type in a name"
     />
 
