--- a/computer.html
+++ b/computer.html
@@ -15,7 +15,7 @@
     <input
       type="text"
       id="myInput"
-      onkeyup="myFunction()"
+      onkeyup="myFunction1()"
       placeholder="Search full forms"
       title="Type in a name"
     />
