--- a/hindi.html
+++ b/hindi.html
@@ -21,6 +21,7 @@
           <a href="hindi.html">मुहावरे</a>
           <a href="english.html">IDIOMS</a>
           <a href="words.html">ENGLISH WORDS</a>
+          <a href="synonyms.html">SYNONYMS</a>
           <a href="computer.html">FULL FORMS</a>
           <a href="roman.html">ROMAN NUMBERS</a>
         </div>
