--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href="roman.html">ROMAN NUMBER</a>
         <a href="computer.html">COMPUTER</a>
         <a href="words.html">ENGLISH WORDS</a>
+        <a href="synonyms.html">SYNONYMS</a>
         <a href="contactus.html">CONTACT US</a>
       </div>
     </div>
