--- a/english.html
+++ b/english.html
@@ -14,7 +14,7 @@
     <input
       type="text"
       id="myInput"
-      onkeyup="myFunction()"
+      onkeyup="myFunction1()"
       placeholder="Search IDIOMS..."
       ;
       title="Type in a name"
