--- a/words.html
+++ b/words.html
@@ -15,7 +15,7 @@
     <input
       type="text"
       id="myInput"
-      onkeyup="myFunction()"
+      onkeyup="myFunction1()"
       placeholder="search words"
       title="Type in a name"
     />
