--- a/synonyms.html
+++ b/synonyms.html
@@ -35,7 +35,7 @@
     <tr>
         <td>Abduct</td>
         <td>अपहृत करना</td>
-        <td> Kidnap seize</td>
+        <td> Kidnap, seize</td>
     </tr>
     <tr>
         <td>Abhor</td>
