--- a/hindi.html
+++ b/hindi.html
@@ -24,6 +24,7 @@
           <a href="synonyms.html">SYNONYMS</a>
           <a href="computer.html">FULL FORMS</a>
           <a href="roman.html">ROMAN NUMBERS</a>
+          <a href="blog.html">BLOG</a>
           <a href="constitutionwords.html">CONSTITUTIONAL WORDS</a>
 
         </div>
