--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <a href="words.html">ENGLISH WORDS</a>
         <a href="synonyms.html">SYNONYMS</a>
         <a href="constitutionwords.html">CONSTITUTIONAL WORDS</a>
+        <a href="blog.html">BLOG</a>
         <a href="contactus.html">CONTACT US</a>
       </div>
     </div>
