--- a/roman.html
+++ b/roman.html
@@ -24,6 +24,7 @@
             <a href="computer.html">FULL FORMS</a>
             <a href="roman.html">ROMAN NUMBERS</a>
             <a href="constitutionwords.html">CONSTITUTIONAL WORDS</a>
+            <a href="blog.html">BLOG</a>
   
           </div>
         </div> 
@@ -32,7 +33,7 @@
       </div>
       
     <h1 style="text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     color: brown;
     text-decoration: underline;">ROMAN NUMERALS</h1>
 
