--- a/words.html
+++ b/words.html
@@ -25,6 +25,7 @@
             <a href="computer.html">FULL FORMS</a>
             <a href="roman.html">ROMAN NUMBERS</a>
             <a href="constitutionwords.html">CONSTITUTIONAL WORDS</a>
+            <a href="blog.html">BLOG</a>
   
           </div>
         </div> 
@@ -35,12 +36,12 @@
     <h1
       style="
         text-align: center;
-        font-size: 25px;
+        font-size: 20px;
         color: brown;
         text-decoration: underline;
       "
     >
-      Most Important DAILY USAGE ENGLISH WORDS
+      MOST IMPORTANT DAILY USAGE ENGLISH WORDS
     </h1>
 
     <input
