--- a/computer.html
+++ b/computer.html
@@ -25,6 +25,7 @@
             <a href="computer.html">FULL FORMS</a>
             <a href="roman.html">ROMAN NUMBERS</a>
             <a href="constitutionwords.html">CONSTITUTIONAL WORDS</a>
+            <a href="blog.html">BLOG</a>
   
           </div>
         </div> 
@@ -35,7 +36,7 @@
     <h4
       style="
         text-align: center;
-        font-size: 25px;
+        font-size: 20px;
         color: brown;
         text-decoration: underline;
       "
