--- a/index.html
+++ b/index.html
@@ -1,57 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="nav.css" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <title>TARUN KUMAR</title>
-    <style>
-      
-      .container {
-        position: relative;
-        max-width: 800px;
-        margin: 0 auto;
-      }
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
 
-      .container img {
-        vertical-align: middle;
-      }
+body {font-family: Arial, Helvetica, sans-serif;}
 
-      .container .content {
-        position: absolute;
-        bottom: 0;
-        background: rgb(0, 0, 0); /* Fallback color */
-        background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-        color: white;
-        width: 100%;
-        padding: 5px;
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="myNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
-      <div class="overlay-content">
-        <a href="index.html">Home</a>
-        <a href="hindi.html">मुहावरे</a>
-        <a href="english.html">IDIOMS</a>
-        <a href="roman.html">ROMAN NUMBER</a>
-        <a href="computer.html">COMPUTER</a>
-        <a href="words.html">ENGLISH WORDS</a>
-        <a href="synonyms.html">SYNONYMS</a>
-        <a href="constitutionwords.html">CONSTITUTIONAL WORDS</a>
-        <a href="blog.html">BLOG</a>
-        <a href="contactus.html">CONTACT US</a>
-      </div>
-    </div>
+.navbar {
+  width: 100%;
+  background-color: #555;
+  overflow: auto;
+}
 
-    <span style="font-size: 32px; cursor: pointer" onclick="openNav()"
-      >&#9776; OPEN</span
-    >
-    <div id="text"></div>
+.navbar a {
+  float: left;
+  padding: 12px;
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background-color: #000;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+
+@media screen and (max-width: 500px) {
+  .navbar a {
+    float: none;
+    display: block;
+  }
+}
+</style>
+<body>
+
+
+
+<div class="navbar">
+  <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
+  <a href="english.html"><i class="fa fa-fw fa-search"></i>Content</a> 
+  <a href="contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact us</a> 
+  
+</div>
+<div id="text"></div>
 
     <div class="container">
       <img
@@ -59,14 +53,5 @@
         alt="WELCOME"
         width="100%"
       />
-      <div class="content">
-        <h1>HI FRIENDS</h1>
-        <p style="text-decoration: overline">
-          "THIS WEBSITE HAS A PURPOSE TO SPREAD THE KNOWLEDGE"
-        </p>
-      </div>
-    </div>
-    <script src="nav.js"></script>
-    <script src="type.js"></script>
-  </body>
-</html>
+</body>
+</html> 
