--- a/contactus.html
+++ b/contactus.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="nav2.css" />
 <title>CONTACT US</title>
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
@@ -47,37 +48,98 @@ a:hover {
   color: black;
 }
 
-.previous {
-  background-color: #04AA6D;
-  color: black;
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 300px;
+  padding: 1px;
+  
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container2 {
+  padding: 2px 16px;
+  
 }
 </style>
 </head>
 <body>
-    <a href="index.html" class="previous">&laquo; HOME</a>
+  <div class="topnav" id="myTopnav">
+    <a href="index.html" class="active">Home</a>
+    
+          <div class="dropdown">
+      <button class="dropbtn">CONTENT 
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="hindi.html">मुहावरे</a>
+        <a href="english.html">IDIOMS</a>
+        <a href="words.html">ENGLISH WORDS</a>
+        <a href="synonyms.html">SYNONYMS</a>
+        <a href="computer.html">FULL FORMS</a>
+        <a href="roman.html">ROMAN NUMBERS</a>
+        <a href="constitutionwords.html">CONSTITUTIONAL WORDS</a>
+        <a href="blog.html">BLOG</a>
+
+      </div>
+    </div> 
+    <a href="contactus.html">CONTACT US</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+  </div>
+    <div class="card">
+      <img src="imag.jpg" alt="Avatar" style="width:300px;height:300px;">
+      <div class="container">
+        <h4><b>Tarun Kumar</b></h4> 
+        <h4><b>E-Mail: tarunkumar1405@yahoo.com</b></h4>
+      </div>
+    </div>
 <h3>Contact US</h3>
 
 <div class="container">
-  <form action="/action_page.php">
+  <form action="index.html">
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <label for="lname">E-mail</label>
+    <input type="text" id="email" name="lastname" placeholder="Your email">
 
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">INDIA</option>
-      <option value="canada">SRILANKA</option>
-      <option value="usa">PAKISTAN</option>
-    </select>
-
+    
+   
     <label for="subject">Subject</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
     <input type="submit" value="Submit">
   </form>
 </div>
-
+<script src="nav2.js"></script>
+<?php
+// Get data from form 
+$name = $_POST['fname'];
+$email= $_POST['email'];
+$message= $_POST['subject'];
+ 
+$to = "tarunkumar1405@yahoo.com";
+$subject = "message from website";
+ 
+// The following text will be sent
+// Name = user entered name
+// Email = user entered email
+// Message = user entered message
+$txt ="Name = ". $name . "\r\n  Email = "
+    . $email . "\r\n Message =" . $message;
+ 
+$headers = "From: noreply@demosite.com" . "\r\n" .
+            "CC: somebodyelse@example.com";
+if($email != NULL) {
+    mail($to, $subject, $txt, $headers);
+}
+ 
+// Redirect to
+header("Location:last.html");
+?>
 </body>
 </html>
